<resources>
    <string name="app_name">Lab15</string>
    <string name="view_data">View Data</string>
    <string name="delete_existing_data">Delete Existing Data</string>
    <string name="update_data">Update Data</string>
    <string name="insert_new_data">Insert New Data</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="contact">Contact</string>
    <string name="name">Name</string>
    <string name="please_enter_the_details_below">Please enter the details below</string>
</resources>